# Event-Management-System

./: .gitignore  CMakeLists.txt  README.md
data/: logs.txt
docs/: architecture.md  data_structures.md  features.md
src/: main.cpp
src/ds/: bst.cpp  bst.h  hash.cpp  hash.h  queue.cpp  queue.h  stack.cpp  stack.h
src/models/: participant.h
src/modules/: event_manager.cpp  event_manager.h  file_manager.cpp  file_manager.h  participant_manager.cpp  participant_manager.h  schedule_manager.cpp  schedule_manager.h
